# temporal-streaming-agents-samples

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  playwright.recording.config.ts  playwright.temporal.config.ts  pyproject.toml  setup.sh
.claude/skills/: record-demo.md
apps/backend-ephemeral/: pyproject.toml
apps/backend-ephemeral/src/: agent.py  events.py  main.py  sessions.py  tools.py
apps/backend-ephemeral/tests/: conftest.py  test_sessions.py
apps/backend-temporal/: ARCHITECTURE.md  pyproject.toml
apps/backend-temporal/src/: activities.py  main.py  types.py  workflows.py
apps/backend-temporal/tests/: conftest.py  test_types.py
apps/frontend/: package.json  tailwind.config.js
apps/frontend/src/__tests__/: processEvent.test.ts  turnReducer.test.ts
apps/frontend/src/app/: globals.css  page.tsx
apps/frontend/src/app/components/: ChatMessage.tsx  CodeExecution.tsx  Sidebar.tsx  StreamingMarkdown.tsx
apps/frontend/src/lib/: chatReducer.ts  processEvent.ts
apps/voice-terminal/: ARCHITECTURE.md  README.md  pyproject.toml
apps/voice-terminal/src/: activities.py  agent.py  audio.py  display.py  main_simple.py  main_temporal.py  transcribe.py  types.py  worker.py  workflows.py
apps/voice-terminal/tests/: test_voice_workflow.py
backend-ephemeral/: pyproject.toml
backend-ephemeral/src/: agent.py  database.py  events.py  main.py  sessions.py  tools.py
backend-ephemeral/tests/: test_api_usage.py  test_events.py  test_sessions.py  test_tools.py
backend-temporal/: ARCHITECTURE.md  pyproject.toml
backend-temporal/src/: activities.py  constants.py  event_batcher.py  main.py  temporal_client.py  types.py  worker.py  workflows.py
backend-temporal/tests/: test_api_usage.py  test_event_batcher.py  test_poll_throttle.py  test_poll_throttle_integration.py  test_types.py
docs/: plan-openai-api-key-requirements.md  review-openai-api-key-tests.md
frontend/: package-lock.json  package.json
frontend/src/__tests__/: chatReducer.test.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/[...path]/: route.ts
frontend/src/app/components/: ChatMessage.tsx  CodeExecution.tsx  ThinkingStep.tsx
scripts/: combine-recordings.sh  run-demo.sh  start-temporal-backend.sh
tests/e2e/: chat.spec.ts
tests/recording/: demo.spec.ts  sync.ts  temporal.spec.ts
voice-terminal/: README.md  pyproject.toml
voice-terminal/src/: activities.py  agent.py  audio.py  database.py  display.py  main_simple.py  main_temporal.py  sql_tool.py  tts.py  types.py  workflows.py
voice-terminal/tests/: conftest.py  test_voice_workflow.py
