[project]
name = "analytics-agent-backend-temporal"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.60.0",
    "temporalio>=1.11.0",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
temporalio = { git = "https://github.com/temporalio/sdk-python.git", branch = "contrib/pubsub" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
