[project]
name = "voice-analytics-terminal"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "analytics-shared",
    "openai>=1.60.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "temporalio>=1.27.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
analytics-shared = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30
